# Traduz-Diadema

./: LICENSE  README.md
trdia/: buildozer.spec  main.py  pyproject.toml
