[tool.poetry]
name = "trdia"
version = "0.1.0"
description = ""
authors = ["Lucas S.O <lucas.ayped@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kivy = {extras = ["full"], version = "^2.3.1"}
argos = "^0.4.4"
buildozer = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
